# c-Ultima

./: CMakeLists.txt
src/: allagan.c  allagan.h  custom_types.h  gear.h  main.c
test/: test_allagan.c
